--- a/src/App.css
+++ b/src/App.css
@@ -26,22 +26,26 @@
   justify-content: space-between;
   flex-wrap: wrap;
   flex: 1;
-  height: 10%;
+  height: 8%;
   min-width: 100%;
   background-color: rgb(164, 57, 173);
 }
 
 /* * Left side of header */
-
+/*  */
 .left>*{
-  margin: 20px;
+  margin: 10px;
 }
 
 .logo{
-  height: 100px;
-  width: 100px;
+  height: 80px;
+  width: 80px;
   border-radius: 50%;
+  background-color: rgb(164, 57, 173);
+  
 }
+
+
 
 /* * Middle of header */
 
@@ -50,7 +54,7 @@
 }
 
 .shop-name{
-  font-size: 50px;
+  font-size: 40px;
   font-family: 'Dancing Script', cursive;
   /* display: inline-block; */
 }
@@ -64,18 +68,21 @@
 
 .motto{
   display: flex;
-  margin: 13px;
+  margin: 10px;
   font-family: 'Dancing Script', cursive;
-  font-weight: 400;
+  font-size: 30px;
+  font-weight: 500;
 }
+
 .right a{
   text-decoration: none;
 }
 
+/* 
 .right a:hover{
   font-size: 25px;
   opacity: 0.5;
-}
+} */
 
 
 
@@ -94,31 +101,40 @@
 }
 
 .cake img{
-  height: 250px;
-  width: 250px;
+  height: 100px;
+  width: 100px;
   border-radius: 20%;
+  border: 2px solid;
   /* display: flex; */
   /* justify-content: center;
   align-items: center; */
 }
 
+.cake img:hover{
+  transform: scale(3.0);
+  border: outset;
+  border-color: cornflowerblue;
+}
+
 .cake h2{
-  font-size: 35px;
-  font-weight: 800; 
+  font-size: 25px;
+  font-weight: 700; 
   color: #187940;
   margin: 10px;
 }
 
 .cake h3{
+  font-size: 20px;
   font-weight: 400;
   color: #7d53f0;
   margin-top:0;
-  margin-bottom: 80px;
+  margin-bottom: 0;
 }
 
 .add-btn-style{
   display: flex;
-  margin-bottom: 30px;
+  margin-top: 10px;
+  margin-bottom: 32px;
 }
 
 /* ! End of Cake.js */
@@ -139,7 +155,7 @@
   justify-content: flex-start;
   flex-wrap: wrap;
   /* margin: px; */
-  margin-top: 50px;
+  margin-top: 13px;
 }
 
 .side-by-side{
@@ -165,3 +181,41 @@
   justify-content: center;
   align-items: center;
 }
+
+.cart-cake img{
+  height: 100px;
+  width: 100px;
+  display: flex;
+  justify-content: center;
+  border-radius: 20%;
+}
+
+.checkout-btn{
+  display: flex;
+  width: 90%;
+  justify-content: center;
+  font-size: 20px;
+  padding: 5px;
+  background-color: #ebee45;
+  
+}
+
+
+
+
+
+
+
+/* ! button layout */
+/* 
+.btn-container{
+  display: flex;
+  justify-content: center;
+  font-size: 18px;
+  cursor: pointer;
+  padding: 3px;
+}
+
+.btn-container:hover{
+  box-shadow: 0 13px 15px 0 #817f7f, 0 17px 50px 0 rgba(0,0,0,0.19);
+} */
