--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,12 @@
+/* ! Main font */
+
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&display=swap');
+
 
 /* * Main main class from App.js */
 
-html, body{
-  min-height: 100%;
-}
-
 .App{
-  min-height: 100%;
+  min-height: 100vh;
   width: 100vw;
   display: flex;
   flex-direction: column;
@@ -143,8 +142,10 @@ html, body{
   margin-bottom: 0;
 }
 
+
+
 button{
-  background-color: #353f6b;
+  background-color: #283361;
   border: none;
   color: white;
   padding: 10px 25px;
@@ -179,14 +180,14 @@ button{
 /* * Positioning and layout of DisplayCakes.js */
 
 .left{
-  width: 85%;
+  width: 80vw;
   min-height: 83vh;
   display: flex;
   flex-direction: column;
   background-color: #7f948f;
 }
 
-.seperate{
+.cake-btn-divide{
   width: 100%;
   min-height: 100%;
   display: flex;
@@ -200,29 +201,38 @@ button{
 }
 
 .buttons{
-  height: 15%;
-  width: 100%;
+  height: 100%;
+  width: 80vw;
   display: flex;
   justify-content: space-between;
-  justify-self: flex-end;
   align-items: center;
   margin: 5px;
 }
 
 .prev-next{
+  width: 20%;
   display: flex;
+  flex-wrap: wrap;
   position: relative;
   bottom: 0px;
 }
 
 .display-count{
+  width: 18%;
   display: flex;
+  flex-wrap: wrap;
+  justify-self: flex-end;
+
   position: relative;
   bottom: 0px;
-  right: .8vw;
+  /* right: .8vw; */
 }
 
-
+.text-wrap{
+  width: 85%;
+  text-align: center;
+  margin-bottom: 2px;
+}
 
 /* ! End of DisplayCakes.js */
 /* * Positioning and layout of Checkout.js */
@@ -247,8 +257,8 @@ button{
 
 .cart img{
   display: flex;
-  align-self: center;
   justify-self: center;
+  align-items: center;
   align-content: center;
 }
 
@@ -256,19 +266,23 @@ button{
   text-align: center;
 }
 
-/* .center-cart{
+.center-cart{
   display: flex;
   justify-content: center;
   align-self: center;
-} */
+}
 
 .cart-cake img{
   height: 100px;
   width: 100px;
   display: flex;
-  justify-content: center;
-  align-self: center;
+  align-content: center;
   border-radius: 20%;
+}
+
+#total{
+  font-size: 24px;
+  font-weight: 500;
 }
 
 .checkout-btn{
