--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,35 @@
-/* ! Main font */
+/* ! Main */
 
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&display=swap');
 
 
-/* * Main main class from App.js */
 
 body{
   overflow-x: hidden;
 }
 
+button{
+  /* background-color: #283361; */
+  background-color: #9D8189;
+  border: none;
+  border-radius: 13%;
+  color: #FCF;
+  padding: 10px 25px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+}
+
+
+/* * Main main class from App.js */
+
 .App{
   min-height: 100vh;
-  width: 100vw;
+  width: 99.5vw;
   display: flex;
   flex-direction: column;
   margin: 0px;
@@ -28,14 +46,19 @@ body{
 
 
 .header{
-  width: 100vw;
+  width: 100%;
+  height: 18vh;
   display: flex;
   justify-content: space-between;
-  height: 18vh;
   min-width: 100%;
   /* background-color:#506369; */
-  background-color: #7f948f;
+  background-color: #9AAFA2;
+  border-bottom: 1px solid #9D8189;
 }
+
+/* .border-bottom{
+
+} */
 
 /* * Left side of header */
 /*  */
@@ -46,20 +69,21 @@ body{
 
 .logo-bg{
   height: 17vh;
-  width: 9vw;
-  background-color: #fae1dd;
+  width: 8.5vw;
+  background-color: #FFD7DF;
   opacity: 95%;
   border-radius: 50%;
   display: flex;
   align-content: center;
   margin: .3em;
+  margin-left: .8em;
 }
 
 .logo{
   height: 95%;
   display: flex;
   align-content: center;
-  margin-left: 1em;
+  margin-left: .7em;
 }
 
 
@@ -81,9 +105,14 @@ body{
   font-family: 'Dancing Script', cursive;
   /* color: #cd2e82; */
   /* color: #ffe5d9 */
-  color: #fff;
+  color: #FFCAD4;
+  text-shadow:
+    2px  2px 0 #000,
+   -.5px -1px 0 #000,  
+    3px -1px 0 #000,
+   -.8px 1.3px 0 #000,
+    3px  4px 0 #000;
 }
-
 
 /* * Right side of header */
 
@@ -130,27 +159,29 @@ body{
 
 .cake img{
   height: 35vh;
-  width: 20vw;
+  width: 18vw;
   border-radius: 20%;
-  border: 3px solid #fec5bb;
+  border: 3px solid #FFCAD4;
 
 }
 
 .cake img:hover{
-  border: 5px outset cornflowerblue;
+  /* border: 5px outset cornflowerblue; */
+  border: 5px outset #D8E2DC;
 }
 
 .cake h2{
   font-size: 30px;
   font-weight: 700; 
-  color: #7cb3b3;
-  margin: 5px;
+  color: #829E8D;
+  margin-top: 5px;
+  margin-bottom: 0PX;
 }
 
 .cake h3{
   font-size: 20px;
   font-weight: 400;
-  color: #ca80c4;
+  color: #D51B7C;
   margin-top:0;
   margin-bottom: 0;
 }
@@ -158,63 +189,51 @@ body{
 .cake h4{
   font-size: 18px;
   font-weight: 300;
-  color: #887caa;
+  color: #9D8189;
   margin-top: 0;
   margin-bottom: 0;
 }
 
 
 
-button{
-  background-color: #283361;
-  border: none;
-  color: white;
-  padding: 10px 25px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  transition-duration: 0.4s;
-  cursor: pointer;
-}
 
 .add-btn-style{
   background-color: transparent;
-  color: rgb(32, 235, 174);
+  color: #565264;
   /* color: #fff; */
-  border: 1px solid rgb(97, 167, 163);
-  background-color: #e8e8e4;
+  /* border: 1px solid #9D8189; */
+  background-color: #9AAFA2;
   border-radius: 50%;
-  font-size: 20px;
-  font-weight: 500;
+  font-size: 18px;
+  font-weight: 200;
   margin-top: 10px;
   margin-bottom: 1vh;
   transition-duration: 0.5s;
   cursor: pointer;
-}
-
-.checkout-margin{
-  margin-top: -8px;
+  padding: 8PX 13PX;
+  transition: .2s;
 }
 
 .add-btn-style:hover{
   /* background-color: #4caf50; */
-  border: 3px solid rgb(98, 170, 119);
-  background-color: #e8e8e4;
-  color: #fff;
+  border: 1px solid #9D8189;
+  background-color: #D8E2DC;
+  color: #9D8189;
 }
+
+
 
 /* ! End of Cake.js */
 /* * Positioning and layout of DisplayCakes.js */
 
 .left{
-  width: 80vw;
-  min-height: 83vh;
+  width: 79vw;
+  min-height: 82vh;
   display: flex;
   flex-direction: column;
   /* background-color: #7f948f;*/
-  background-color: #f8edeb;
+  /* background-color: #F4ACB7; */
+  background-color: #FFCAD4;
 }
 
 .cake-btn-divide{
@@ -237,6 +256,7 @@ button{
   justify-content: space-between;
   align-items: center;
   margin: 5px;
+  overflow: hidden;
 }
 
 .btn-left{
@@ -252,14 +272,14 @@ button{
   display: flex;
   flex-wrap: wrap;
   justify-self: flex-end;
-
   position: relative;
   bottom: 0px;
-  /* right: .8vw; */
+  right: .8vw;
 }
 
 .text-wrap{
-  width: 85%;
+  width: 98%;
+  color: #9d8189;
   text-align: center;
   margin-bottom: 2px;
 }
@@ -269,12 +289,20 @@ button{
 
 .right{
   min-height: 100%;
-  width: 20vw;
+  width: 21vw;
   display: flex;
   flex-direction: column;
   align-items: center;
   /* background-color: #afeeee; */
-  background-color: #fae1dd;
+  /* background-color: #FFCAD4; */
+  background-color: #F4ACB7;
+  border-left: 1px solid #9D8189;
+  color: #565264;
+}
+
+.right h2{
+  font-size: 38px;
+  font-weight: 400;
 }
 
 .cart{
@@ -321,60 +349,69 @@ button{
   width: 100px;
   display: flex;
   align-content: center;
+  border: .5px solid #9D8189;
   border-radius: 20%;
 }
 
 .cart-cake h2{
-  font-size: 22px;
-  color: #b9a456;
+  font-size: 20px;
+  color:#829E8D;
   margin-top: 1px;
   margin-bottom: 0;
 }
 
 .cart-cake h3{
-  font-size: 18px;
-  color: #0f0;
+  font-size: 17px;
+  font-weight: 400;
+  color: #D51B7C;
   margin-top: 0;
 }
 
 .cart-cake button{
   display: inline-block;
-  background-color: #fec601;
+  background-color: #9D8189;
   font-size: 20px;
+  border-radius: 13%;
   padding: 5px 13px;
 }
 
 #total{
-  font-size: 24px;
+  width: 80%;
+  text-align: center;
+  font-size: 25px;
   font-weight: 500;
+  color: #565264;
+  border-top: 3px dotted #9D8189;
+  margin-top: 30px;
 }
 
 .checkout-btn{
   display: flex;
   width: 90%;
   justify-content: center;
-  font-size: 20px;
+  font-size: 28px;
+  opacity: 0.5;
+  color: #d3c3c8;
+  background-color:  #9D8189;
+  border: 1.5px solid #9D8189;
+  margin-top: 20px;
   padding: 5px;
-  background-color: #fec601;
-  cursor: pointer;
 }
 
-
-
-
-
-
-
-/* ! button layout */
-/* 
-.btn-container{
-  display: flex;
-  justify-content: center;
-  font-size: 18px;
-  cursor: pointer;
-  padding: 3px;
+.checkout-btn:hover{
+  opacity: 1;
+  background-color: #FFCAD4;
+  color: #565264;
+  font-size: 30px;
 }
 
-.btn-container:hover{
-  box-shadow: 0 13px 15px 0 #817f7f, 0 17px 50px 0 rgba(0,0,0,0.19);
-} */
+/* * In Cake.js but applies to Checkout.js */
+
+
+.checkout-margin{
+  font-weight: 400;
+  margin-top: 0px;
+  color: #9D8189;
+}
+
+/* * End of Checkout.js in Cake.js */
